--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">LuATraining</string>
+    <string name="app_name">Logik und Algebra Training</string>
+    <string name="begrueßung">Herzlich Willkommen zur Logik und Algebra Trainingsapp. Bitte wählen Sie aus dem Menü ein Kapitel aus</string>
+    <string name="logo">Platzhalter für das DHBW Logo</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_settings">Settings</string>
+    <string name="navigation_drawer_open">Öffnet das Navigationsmenü</string>
+    <string name="navigation_drawer_close">Schließt das Navigationsmenü</string>
 </resources>
