--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="einstellungen">Einstellungen</string>
     <string name="logging">Logging</string>
     <string name="hint_eingabefeld">Eingabefeld für die Lösung</string>
+    <string name="button_next">Weiter</string>
+    <string name="image_question">Bild zur Frage</string>
 </resources>
